# fantasyfootball2021v2

./: README.md  data.py  depth_charts.py  draft.py  draft_sim.py  features.py  player_gamelogs.py  players.py  pyproject.toml  test.py  utils.py
data/: 2020fantasytable.csv  aggfantasytable.csv  features.csv
draftkit/: QBrankings.csv  RBrankings.csv  TErankings.csv  WRrankings.csv  rankings.csv
meta_data/: 2021draftees_thescore.csv  FantasyPros_2021_Draft_ALL_Rankings.csv  depthchart_example.csv  team_names.csv
