[tool.poetry]
name = "fantasyfootball2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pip = "^21.2.4"
install = "^1.3.4"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
